# wasoc-jupyterlite

./: README.md  jupyter-lite.json  overrides.json  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
content/: demo.ipynb
jlitepkgs/: pyproject.toml
jlitepkgs/jlitepkgs/: __init__.py
jupyterlab/: overrides.json
