[tool.poetry]
name = "wasoc-jupyterlite"
version = "0.1.0"
description = ""
authors = ["Adon Metcalfe <adonm@fastmail.fm>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
bqplot = "^0.12.36"
ipycanvas = "^0.13.1"
ipyevents = "^2.0.1"
ipyleaflet = "^0.17.1"
ipympl = "^0.9.2"
jupyterlab = "^3.4.8"
jupyterlab-geojson = "^3.2.0"
jupyterlite = {extras = ["all"], version = "^0.1.0b13"}
plotly = "^5.10.0"
bokeh = "^2.4.3"
bamboolib = "^1.30.18"
pyodide-http = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
