[tool.poetry]
name = "jlitepkgs"
version = "0.1.0"
description = ""
authors = ["Adon Metcalfe <adonm@fastmail.fm>"]
readme = "README.md"
packages = [{include = "jlitepkgs"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
pyodide-http = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
